fixed: onDateSelect getting called on both date select if rangeEnabled, added: onOk/select will be called if user clicks outside of the calendar and calendar hides, fixed: if selectable date is in last line, then its backgound is cropped

--- a/src/components/grids/index.scss
+++ b/src/components/grids/index.scss
@@ -1,7 +1,7 @@
 $calendar-width: 260px;
 .grids {
   position: relative;
-  min-height: 270px;
+  min-height: 285px;
   width: $calendar-width;
   overflow: hidden;
   padding: 10px 0;
